--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.6.0",
+    "rehype-slug": "^6.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.16",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.10.2",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
